--- a/css/style.css
+++ b/css/style.css
@@ -39,7 +39,7 @@ a {
 }
 
 img {
-  max-width: 100%;
+  width: 100%;
 }
 
 .contenedor {
@@ -96,4 +96,173 @@ h3 {
 .navegacion__enlace--activo,
 .navegacion__enlace:hover {
   color: var(--secundario);
+}
+
+/* FOOTER */
+.footer {
+  background-color: var(--primarioOscuro);
+  padding: 1rem;
+  margin-top: 2rem;
+}
+
+.footer__texto {
+  font-family: var(--fuentePrincipal);
+  text-align: center;
+  font-size: 2.2rem;
+}
+
+/* GRID */
+
+.grid {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 2rem;
+}
+@media (min-width: 768px) {
+  .grid {
+    grid-template-columns: repeat(3, 1fr);
+  }
+}
+/* PRODUCTOS */
+
+.producto {
+  background-color: var(--primarioOscuro);
+  padding: 1rem;
+}
+
+.producto__nombre {
+  font-size: 4rem;
+}
+.producto__precio {
+  font-size: 2.8rem;
+  color: var(--secundario);
+}
+
+.producto__nombre,
+.producto__precio {
+  font-family: var(--fuentePrincipal);
+  margin: 0 auto;
+  text-align: center;
+}
+
+/* GRÁFICOS */
+
+.grafico {
+  min-height: 30rem;
+  background-repeat: no-repeat;
+  background-size: cover;
+  grid-column: 1/3;
+}
+
+.grafico--camisa {
+  grid-row: 2/3;
+  background-image: url(../img/grafico1.jpg);
+}
+
+.grafico--node {
+  grid-row: 8/9;
+  background-image: url(../img/grafico2.jpg);
+}
+
+@media (min-width: 768px) {
+  .grafico--node {
+    grid-row: 5/6;
+    grid-column: 2/4;
+  }
+}
+
+/* NOSOTROS */
+
+.nosotros {
+  display: grid;
+  grid-template-rows: repeat(2, auto);
+}
+
+@media (min-width: 768px) {
+  .nosotros {
+    grid-template-rows: repeat(1, 1fr);
+    grid-template-columns: repeat(2, 1fr);
+    column-gap: 2rem;
+  }
+}
+
+.nosotros p {
+  margin: 1rem 0 1rem 0;
+}
+
+.nosotros p:last-of-type {
+  margin: 0;
+}
+
+.nosotros__imagen {
+  grid-row: 1/2;
+}
+
+@media (min-width: 768px) {
+  .nosotros__imagen {
+    grid-column: 2/3;
+  }
+}
+
+/* BLOQUES */
+
+.bloques {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 2rem;
+}
+
+@media (min-width: 768px) {
+  .bloques {
+    grid-template-columns: repeat(4, 1fr);
+  }
+}
+
+.bloque {
+  text-align: center;
+}
+
+.bloque__titulo {
+  margin: 0;
+}
+
+/* PAGINA PRODUCTO */
+
+@media (min-width: 768px) {
+  .camisa {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    column-gap: 2rem;
+  }
+}
+
+.formulario {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 2rem;
+}
+
+.formulario__campo {
+  border: 1rem solid var(--primarioOscuro);
+  background-color: transparent;
+  color: var(--blanco);
+  font-size: 2rem;
+  font-family: Arial, Helvetica, sans-serif;
+  padding: 1rem;
+  appearance: none;
+}
+
+.formulario__submit {
+  background-color: var(--secundario);
+  border: none;
+  font-size: 2rem;
+  font-family: var(--fuentePrincipal);
+  padding: 2rem;
+  transition: background-color 0.3s ease;
+  grid-column: 1/3;
+}
+
+.formulario__submit:hover {
+  cursor: pointer;
+  background-color: var(--secundarioOscuro);
 }
